@@ -16,8 +16,7 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import javax.servlet.http.HttpSession;
 
-import com.xczhihui.bxg.online.common.enums.BalanceType;
-import com.xczhihui.bxg.online.common.enums.IncreaseChangeType;
+import com.xczhihui.bxg.online.common.enums.OrderFrom;
 import com.xczhihui.bxg.online.common.enums.Payment;
 import net.sf.json.JSONObject;
 
@@ -75,7 +74,6 @@ import com.xczh.consumer.market.wxpay.entity.SendRedPack;
 import com.xczh.consumer.market.wxpay.util.CommonUtil;
 import com.xczh.consumer.market.wxpay.util.MD5SignUtil;
 import com.xczhihui.bxg.online.api.po.RewardStatement;
-import com.xczhihui.bxg.online.api.po.UserCoinIncrease;
 import com.xczhihui.bxg.online.api.service.CityService;
 import com.xczhihui.bxg.online.api.service.EnchashmentService;
 import com.xczhihui.bxg.online.api.service.UserCoinService;
@@ -371,18 +369,19 @@ public class WxPayController {
                             wxcpPayFlow.setSubject(rpv.getSubject());
                             wxcpPayFlowService.insert(wxcpPayFlow);
 
-                            UserCoinIncrease userCoinIncrease = new UserCoinIncrease();
-                            userCoinIncrease.setUserId(wxcpPayFlow.getUser_id());
-                            userCoinIncrease.setChangeType(IncreaseChangeType.RECHARGE.getCode());
-                            userCoinIncrease.setPayType(Payment.WECHATPAY.getCode());
-							userCoinIncrease.setBalanceType(BalanceType.BALANCE.getCode());
-							//熊猫币
-                            userCoinIncrease.setValue(new BigDecimal(new Double(wxcpPayFlow.getTotal_fee()) / 100 * rate));
-                            userCoinIncrease.setCreateTime(new Date());
-//						userCoinIncrease.setChangeType(0);
-                            userCoinIncrease.setOrderFrom(Integer.valueOf(rpv.getClientType()));
-                            userCoinIncrease.setOrderNoRecharge(wxcpPayFlow.getOut_trade_no());
-                            userCoinService.updateBalanceForIncrease(userCoinIncrease);
+							BigDecimal coin = new BigDecimal(new Double(wxcpPayFlow.getTotal_fee()) / 100 * rate);
+//
+//							UserCoinIncrease userCoinIncrease = new UserCoinIncrease();
+//							userCoinIncrease.setUserId(wxcpPayFlow.getUser_id());
+//							userCoinIncrease.setChangeType(IncreaseChangeType.RECHARGE.getCode());
+//							userCoinIncrease.setPayType(Payment.WECHATPAY.getCode());
+//							userCoinIncrease.setBalanceType(BalanceType.BALANCE.getCode());
+//							//熊猫币
+//							userCoinIncrease.setValue(coin);
+//                            userCoinIncrease.setCreateTime(new Date());
+//                            userCoinIncrease.setOrderFrom(Integer.valueOf(rpv.getClientType()));
+//                            userCoinIncrease.setOrderNoRecharge(wxcpPayFlow.getOut_trade_no());
+                            userCoinService.updateBalanceForRecharge(wxcpPayFlow.getUser_id(),Payment.WECHATPAY,coin, OrderFrom.ANDROID,wxcpPayFlow.getOut_trade_no());
                         }
                     }
 				}
